--- a/index.html
+++ b/index.html
@@ -3,23 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="normalize.css" type="text/css" />
-    <link rel="stylesheet" href="style.css" type="text/css" />
-    <script src="index.js"></script>
+    <link rel="stylesheet" href="css/normalize.css" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <script src="js/index.js"></script>
     <title>Grid-Layout-Practice</title>
   </head>
   <body>
-    <header>
-      <nav class="navigation">
-        <a class="navigation__link" href="">figma practice</a>
-        <a class="navigation__link navigation__link--accent" href=""
-          >grid practice</a
-        >
-        <a class="navigation__link" href="">hamburger-practice</a>
+    <header class="navigation-bar">
+      <nav class="menu">
+        <a class="menu__link" href="">figma practice</a>
+        <a class="menu__link menu__link--accent" href="">grid practice</a>
+        <a class="menu__link" href="">hamburger-practice</a>
       </nav>
     </header>
 
-    <main class="grid-container">
+    <main class="main grid-container">
       <header class="header">
         <h1 class="header__title">
           You are browsing this site on {small/medium/large screen-color-coded}
