completed mobile menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   </head>
   <body>
     <header class="navigation-bar">
-      <nav class="menu">
+      <button class="button button-js">
+        <span class="red-accent-dot">.</span>menu
+      </button>
+      <nav class="menu menu-js">
         <a class="menu__link" href="">figma practice</a>
         <a class="menu__link menu__link--accent" href="">grid practice</a>
         <a class="menu__link" href="">hamburger-practice</a>
@@ -20,8 +23,8 @@
     <main class="main grid-container">
       <header class="header">
         <h1 class="header__title">
-          You are browsing this site on {small/medium/large screen-color-coded}
-          and your screen width is {xxx}px
+          You are browsing this site on {small} screen and your screen width is
+          {xxx}px
         </h1>
         <p class="header__description">
           This simple website was made to practice the following:
