added more styles to the button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="navigation-bar">
       <button class="button button-js">
-        <span class="red-accent-dot">.</span>menu
+        <span class="accent-dot">.</span>menu
       </button>
       <nav class="menu menu-js">
         <a class="menu__link" href="">figma practice</a>
