mobile version WIP

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" type="text/css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,100&family=Space+Mono:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Niconne&family=Roboto:ital,wght@0,400;0,500;1,100&family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
@@ -27,19 +27,25 @@
     <main class="main grid-container">
       <header class="header">
         <h1 class="header__title">
-          You are browsing this site on {small} screen and your screen width is
-          {xxx}px
+          Let's practice some HTML & CSS!
         </h1>
         <p class="header__description">
           This simple website was made to practice the following:
         </p>
         <ul class="list">
+          <div class="checkmark"></div>
           <li class="list__item list__item--first">Mobile-First Approach</li>
+          <div class="checkmark"></div>
           <li class="list__item">CSS Grid</li>
+          <div class="checkmark"></div>
           <li class="list__item">CSS Flexbox</li>
+          <div class="checkmark"></div>
           <li class="list__item">Semantic HTML</li>
+          <div class="checkmark"></div>
           <li class="list__item">RWD</li>
+          <div class="checkmark"></div>
           <li class="list__item">BEM</li>
+          <div class="checkmark"></div>
           <li class="list__item list__item--last">JS Query Selectors</li>
         </ul>
       </header>
@@ -68,9 +74,8 @@
 
           <aside class="side-note">
             <p class="side-note__description">
-              I quit my corporate job on xxx and decided to pursue web
-              developement. This is an example of an <b>&LTaside&GT</b> element
-              being utilized to mark up a paragraph in an article. Source:
+              This is an example of an <b>&LTaside&GT</b> element being utilized
+              to mark up a paragraph in an article. Source:
               <a
                 class="side-note__link"
                 href="http://https://developer.mozilla.org/en-US/docs/Web/HTML/Element/aside#Using_%3Caside%3E"
