--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" type="text/css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Niconne&family=Roboto:ital,wght@0,400;0,500;1,100&family=Space+Mono:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cantarell:ital@1&family=Roboto:ital,wght@0,400;0,500;1,100&family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
@@ -33,20 +33,40 @@
           This simple website was made to practice the following:
         </p>
         <ul class="list">
-          <div class="checkmark"></div>
-          <li class="list__item list__item--first">Mobile-First Approach</li>
-          <div class="checkmark"></div>
-          <li class="list__item">CSS Grid</li>
-          <div class="checkmark"></div>
-          <li class="list__item">CSS Flexbox</li>
-          <div class="checkmark"></div>
-          <li class="list__item">Semantic HTML</li>
-          <div class="checkmark"></div>
-          <li class="list__item">RWD</li>
-          <div class="checkmark"></div>
-          <li class="list__item">BEM</li>
-          <div class="checkmark"></div>
-          <li class="list__item list__item--last">JS Query Selectors</li>
+          <li class="list__item list__item--first">
+            <div class="checkmark"></div>
+            Mobile-First Approach
+          </li>
+
+          <li class="list__item">
+            <div class="checkmark"></div>
+            CSS Grid
+          </li>
+
+          <li class="list__item">
+            <div class="checkmark"></div>
+            CSS Flexbox
+          </li>
+
+          <li class="list__item">
+            <div class="checkmark"></div>
+            Semantic HTML
+          </li>
+
+          <li class="list__item">
+            <div class="checkmark"></div>
+            RWD
+          </li>
+
+          <li class="list__item">
+            <div class="checkmark"></div>
+            BEM
+          </li>
+
+          <li class="list__item list__item--last">
+            <div class="checkmark"></div>
+            JS Query Selectors
+          </li>
         </ul>
       </header>
 
@@ -74,8 +94,9 @@
 
           <aside class="side-note">
             <p class="side-note__description">
-              This is an example of an <b>&LTaside&GT</b> element being utilized
-              to mark up a paragraph in an article. Source:
+              This is an example of an <b>&LT;aside&GT;</b> element being
+              utilized to mark up a paragraph in an article. <br />
+              Source:
               <a
                 class="side-note__link"
                 href="http://https://developer.mozilla.org/en-US/docs/Web/HTML/Element/aside#Using_%3Caside%3E"
@@ -87,17 +108,16 @@
       </section>
 
       <section class="section">
-        <p class="section__description">
+        <h2 class="section__title">
           By the way, check out a list of my favourite web dev related games!
-        </p>
+        </h2>
         <ul class="games">
           <li class="games__item">
             <a
               class="games__link"
               href="https://mastery.games/flexboxzombies/"
               target="_blank"
-              rel="noreferrer"
-              rel="noopener"
+              rel="noreferrer noopener"
               >Flexbox Zombies</a
             >
           </li>
@@ -106,8 +126,7 @@
               class="games__link"
               href="https://flexboxfroggy.com/"
               target="_blank"
-              rel="noreferrer"
-              rel="noopener"
+              rel="noreferrer noopener"
               >Flexbox Froggy</a
             >
           </li>
@@ -116,8 +135,7 @@
               class="games__link"
               href="https://cssgridgarden.com/"
               target="_blank"
-              rel="noreferrer"
-              rel="noopener"
+              rel="noreferrer noopener"
               >Grid Garden</a
             >
           </li>
@@ -126,8 +144,7 @@
               class="games__link"
               href="https://www.codingame.com/"
               target="_blank"
-              rel="noreferrer"
-              rel="noopener"
+              rel="noreferrer noopener"
               >Coding Game</a
             >
           </li>
@@ -136,8 +153,7 @@
               class="games__link"
               href="https://codecombat.com/"
               target="_blank"
-              rel="noreferrer"
-              rel="noopener"
+              rel="noreferrer noopener"
               >Code Combat</a
             >
           </li>
@@ -146,8 +162,7 @@
               class="games__link"
               href="https://www.codewars.com/"
               target="_blank"
-              rel="noreferrer"
-              rel="noopener"
+              rel="noreferrer noopener"
               >Code Wars</a
             >
           </li>
@@ -160,8 +175,7 @@
             class="side-note__link"
             href="https://codepip.com/"
             target="_blank"
-            rel="noreferrer"
-            rel="noopener"
+            rel="noreferrer noopener"
             >Codepip</a
           >
         </p>
@@ -174,16 +188,14 @@
           class="side-note__link"
           href="https://github.com/krzysztof-kozak"
           target="_blank"
-          rel="noreferrer"
-          rel="noopener"
+          rel="noreferrer noopener"
           >GitHub</a
         >
         <a
           class="side-note__link"
           href="https://www.linkedin.com/in/kriskozak/"
           target="_blank"
-          rel="noreferrer"
-          rel="noopener"
+          rel="noreferrer noopener"
           >LinkedIn</a
         >
       </p>
