finalizing mobile version

--- a/index.html
+++ b/index.html
@@ -111,75 +111,77 @@
         <h2 class="section__title">
           By the way, check out a list of my favourite web dev related games!
         </h2>
-        <ul class="games">
-          <li class="games__item">
-            <a
-              class="games__link"
-              href="https://mastery.games/flexboxzombies/"
-              target="_blank"
-              rel="noreferrer noopener"
-              >Flexbox Zombies</a
-            >
-          </li>
-          <li class="games__item">
-            <a
-              class="games__link"
-              href="https://flexboxfroggy.com/"
-              target="_blank"
-              rel="noreferrer noopener"
-              >Flexbox Froggy</a
-            >
-          </li>
-          <li class="games__item">
-            <a
-              class="games__link"
-              href="https://cssgridgarden.com/"
-              target="_blank"
-              rel="noreferrer noopener"
-              >Grid Garden</a
-            >
-          </li>
-          <li class="games__item">
-            <a
-              class="games__link"
-              href="https://www.codingame.com/"
-              target="_blank"
-              rel="noreferrer noopener"
-              >Coding Game</a
-            >
-          </li>
-          <li class="games__item">
-            <a
-              class="games__link"
-              href="https://codecombat.com/"
-              target="_blank"
-              rel="noreferrer noopener"
-              >Code Combat</a
-            >
-          </li>
-          <li class="games__item">
-            <a
-              class="games__link"
-              href="https://www.codewars.com/"
-              target="_blank"
-              rel="noreferrer noopener"
-              >Code Wars</a
-            >
-          </li>
-        </ul>
+        <div class="wrapper">
+          <ul class="games">
+            <li class="games__item">
+              <a
+                class="games__link"
+                href="https://mastery.games/flexboxzombies/"
+                target="_blank"
+                rel="noreferrer noopener"
+                >Flexbox Zombies</a
+              >
+            </li>
+            <li class="games__item">
+              <a
+                class="games__link"
+                href="https://flexboxfroggy.com/"
+                target="_blank"
+                rel="noreferrer noopener"
+                >Flexbox Froggy</a
+              >
+            </li>
+            <li class="games__item">
+              <a
+                class="games__link"
+                href="https://cssgridgarden.com/"
+                target="_blank"
+                rel="noreferrer noopener"
+                >Grid Garden</a
+              >
+            </li>
+            <li class="games__item">
+              <a
+                class="games__link"
+                href="https://www.codingame.com/"
+                target="_blank"
+                rel="noreferrer noopener"
+                >Coding Game</a
+              >
+            </li>
+            <li class="games__item">
+              <a
+                class="games__link"
+                href="https://codecombat.com/"
+                target="_blank"
+                rel="noreferrer noopener"
+                >Code Combat</a
+              >
+            </li>
+            <li class="games__item">
+              <a
+                class="games__link"
+                href="https://www.codewars.com/"
+                target="_blank"
+                rel="noreferrer noopener"
+                >Code Wars</a
+              >
+            </li>
+          </ul>
+          <aside class="side-note">
+            <p class="side-note__description side-note__description--padding">
+              You can find more cool games on
+              <a
+                class="side-note__link"
+                href="https://codepip.com/"
+                target="_blank"
+                rel="noreferrer noopener"
+                >Codepip</a
+              >
+            </p>
+          </aside>
+        </div>
       </section>
-      <aside class="side-note">
-        <p class="side-note__description">
-          You can find more cool games on
-          <a
-            class="side-note__link"
-            href="https://codepip.com/"
-            target="_blank"
-            rel="noreferrer noopener"
-            >Codepip</a
-          >
-        </p>
-      </aside>
     </main>
     <footer class="footer">
       <p>
