--- a/index.html
+++ b/index.html
@@ -1,206 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/normalize.css" type="text/css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cantarell:ital@1&family=Roboto:ital,wght@0,400;0,500;1,100&family=Space+Mono:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
-    <script src="js/index.js"></script>
-    <title>Grid-Layout-Practice</title>
-  </head>
-  <body>
-    <header class="navigation-bar">
-      <button class="button button-js">
-        <span class="accent-dot">.</span>menu
-      </button>
-      <nav class="menu menu-js">
-        <a class="menu__link" href="">figma practice</a>
-        <a class="menu__link menu__link--accent" href="">grid practice</a>
-        <a class="menu__link" href="">hamburger-practice</a>
-      </nav>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/normalize.css" type="text/css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cantarell:ital@1&family=Roboto:ital,wght@0,400;0,500;1,100&family=Space+Mono:wght@400;700&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css" type="text/css" />
+  <script src="js/index.js" defer></script>
+  <script src="https://kit.fontawesome.com/9a61d55fd0.js"
+    crossorigin="anonymous"></script>
+  <title>Grid-Layout-Practice</title>
+</head>
+
+<body>
+  <header class="navigation-bar">
+    <button class="button button-js">
+      <span class="accent-dot">.</span>menu
+    </button>
+    <nav class="menu menu-js">
+      <a class="menu__link" href="">PH link 1</a>
+      <a class="menu__link menu__link--accent" href="">PH link 2</a>
+      <a class="menu__link" href="">PH link 3</a>
+    </nav>
+  </header>
+
+  <main class="main grid-container">
+    <header class="header">
+      <h1 class="header__title">
+        Let's practice some HTML & CSS!
+      </h1>
+      <p class="header__description">
+        This simple website was made to practice the following:
+      </p>
+      <ul class="list">
+        <li class="list__item list__item--first">
+          <div class="checkmark"></div>
+          Mobile-First Approach
+        </li>
+
+        <li class="list__item">
+          <div class="checkmark"></div>
+          CSS Grid
+        </li>
+
+        <li class="list__item">
+          <div class="checkmark"></div>
+          CSS Flexbox
+        </li>
+
+        <li class="list__item">
+          <div class="checkmark"></div>
+          Semantic HTML
+        </li>
+
+        <li class="list__item">
+          <div class="checkmark"></div>
+          RWD
+        </li>
+
+        <li class="list__item">
+          <div class="checkmark"></div>
+          BEM
+        </li>
+
+        <li class="list__item list__item--last">
+          <div class="checkmark"></div>
+          JS Query Selectors
+        </li>
+      </ul>
     </header>
 
-    <main class="main grid-container">
-      <header class="header">
-        <h1 class="header__title">
-          Let's practice some HTML & CSS!
-        </h1>
-        <p class="header__description">
-          This simple website was made to practice the following:
+    <section class="section">
+      <h2 class="section__title">Few words about me</h2>
+      <article class="article">
+        <h3 class="article__title">Who am I?</h3>
+        <p class="article__description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
+          ipsa? Necessitatibus corrupti a, in provident sunt officia nemo
+          ratione aut, ullam perferendis facilis tempora cum. Iste enim fuga
+          quis et.Voluptas blanditiis sunt nesciunt veniam vel fugit nobis
+          suscipit! Voluptate debitis recusandae explicabo, fugiat officia,
+          incidunt ex consequatur molestias temporibus ratione possimus?
+          Architecto iste at voluptas eos consequatur modi veritatis?
         </p>
-        <ul class="list">
-          <li class="list__item list__item--first">
-            <div class="checkmark"></div>
-            Mobile-First Approach
-          </li>
+      </article>
 
-          <li class="list__item">
-            <div class="checkmark"></div>
-            CSS Grid
-          </li>
+      <article class="article">
+        <h3 class="article__title">What's my goal</h3>
+        <p class="article__description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
+          ipsa? Necessitatibus corrupti.
+        </p>
 
-          <li class="list__item">
-            <div class="checkmark"></div>
-            CSS Flexbox
-          </li>
+        <aside class="side-note">
+          <p class="side-note__description">
+            This is an example of an <b>&LT;aside&GT;</b> element being
+            utilized to mark up a paragraph in an article. <br />
+            Source:
+            <a class="side-note__link"
+              href="http://https://developer.mozilla.org/en-US/docs/Web/HTML/Element/aside#Using_%3Caside%3E">MDN
+              Article</a>
+          </p>
+        </aside>
+      </article>
+    </section>
 
-          <li class="list__item">
-            <div class="checkmark"></div>
-            Semantic HTML
+    <section class="section">
+      <h2 class="section__title">
+        By the way, check out a list of my favourite web dev related games!
+      </h2>
+      <div class="wrapper">
+        <ul class="games">
+          <li class="games__item">
+            <a class="games__link" href="https://mastery.games/flexboxzombies/"
+              target="_blank" rel="noreferrer noopener">Flexbox Zombies</a>
           </li>
-
-          <li class="list__item">
-            <div class="checkmark"></div>
-            RWD
+          <li class="games__item">
+            <a class="games__link" href="https://flexboxfroggy.com/"
+              target="_blank" rel="noreferrer noopener">Flexbox Froggy</a>
           </li>
-
-          <li class="list__item">
-            <div class="checkmark"></div>
-            BEM
+          <li class="games__item">
+            <a class="games__link" href="https://cssgridgarden.com/"
+              target="_blank" rel="noreferrer noopener">Grid Garden</a>
           </li>
-
-          <li class="list__item list__item--last">
-            <div class="checkmark"></div>
-            JS Query Selectors
+          <li class="games__item">
+            <a class="games__link" href="https://www.codingame.com/"
+              target="_blank" rel="noreferrer noopener">Coding Game</a>
+          </li>
+          <li class="games__item">
+            <a class="games__link" href="https://codecombat.com/"
+              target="_blank" rel="noreferrer noopener">Code Combat</a>
+          </li>
+          <li class="games__item">
+            <a class="games__link" href="https://www.codewars.com/"
+              target="_blank" rel="noreferrer noopener">Code Wars</a>
           </li>
         </ul>
-      </header>
-
-      <section class="section">
-        <h2 class="section__title">Few words about me</h2>
-        <article class="article">
-          <h3 class="article__title">Who am I?</h3>
-          <p class="article__description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
-            ipsa? Necessitatibus corrupti a, in provident sunt officia nemo
-            ratione aut, ullam perferendis facilis tempora cum. Iste enim fuga
-            quis et.Voluptas blanditiis sunt nesciunt veniam vel fugit nobis
-            suscipit! Voluptate debitis recusandae explicabo, fugiat officia,
-            incidunt ex consequatur molestias temporibus ratione possimus?
-            Architecto iste at voluptas eos consequatur modi veritatis?
+        <aside class="side-note">
+          <p class="side-note__description side-note__description--padding">
+            You can find more cool games on
+            <a class="side-note__link" href="https://codepip.com/"
+              target="_blank" rel="noreferrer noopener"><span
+                class="bigger">Codepip</span></a>
           </p>
-        </article>
+        </aside>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <p class="footer__description">
+      Made by Krzysztof Kozak
+      <a class="footer__link" href="https://github.com/krzysztof-kozak"
+        target="_blank" rel="noreferrer noopener"><i
+          class="fab fa-github-square"></i></a>
+      <a class="footer__link" href="https://www.linkedin.com/in/kriskozak/"
+        target="_blank" rel="noreferrer noopener"><i
+          class="fab fa-linkedin"></i></a>
+    </p>
+  </footer>
+</body>
 
-        <article class="article">
-          <h3 class="article__title">What's my goal</h3>
-          <p class="article__description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
-            ipsa? Necessitatibus corrupti.
-          </p>
-
-          <aside class="side-note">
-            <p class="side-note__description">
-              This is an example of an <b>&LT;aside&GT;</b> element being
-              utilized to mark up a paragraph in an article. <br />
-              Source:
-              <a
-                class="side-note__link"
-                href="http://https://developer.mozilla.org/en-US/docs/Web/HTML/Element/aside#Using_%3Caside%3E"
-                >MDN Article</a
-              >
-            </p>
-          </aside>
-        </article>
-      </section>
-
-      <section class="section">
-        <h2 class="section__title">
-          By the way, check out a list of my favourite web dev related games!
-        </h2>
-        <div class="wrapper">
-          <ul class="games">
-            <li class="games__item">
-              <a
-                class="games__link"
-                href="https://mastery.games/flexboxzombies/"
-                target="_blank"
-                rel="noreferrer noopener"
-                >Flexbox Zombies</a
-              >
-            </li>
-            <li class="games__item">
-              <a
-                class="games__link"
-                href="https://flexboxfroggy.com/"
-                target="_blank"
-                rel="noreferrer noopener"
-                >Flexbox Froggy</a
-              >
-            </li>
-            <li class="games__item">
-              <a
-                class="games__link"
-                href="https://cssgridgarden.com/"
-                target="_blank"
-                rel="noreferrer noopener"
-                >Grid Garden</a
-              >
-            </li>
-            <li class="games__item">
-              <a
-                class="games__link"
-                href="https://www.codingame.com/"
-                target="_blank"
-                rel="noreferrer noopener"
-                >Coding Game</a
-              >
-            </li>
-            <li class="games__item">
-              <a
-                class="games__link"
-                href="https://codecombat.com/"
-                target="_blank"
-                rel="noreferrer noopener"
-                >Code Combat</a
-              >
-            </li>
-            <li class="games__item">
-              <a
-                class="games__link"
-                href="https://www.codewars.com/"
-                target="_blank"
-                rel="noreferrer noopener"
-                >Code Wars</a
-              >
-            </li>
-          </ul>
-          <aside class="side-note">
-            <p class="side-note__description side-note__description--padding">
-              You can find more cool games on
-              <a
-                class="side-note__link"
-                href="https://codepip.com/"
-                target="_blank"
-                rel="noreferrer noopener"
-                >Codepip</a
-              >
-            </p>
-          </aside>
-        </div>
-      </section>
-    </main>
-    <footer class="footer">
-      <p>
-        Made by Krzysztof Kozak
-        <a
-          class="side-note__link"
-          href="https://github.com/krzysztof-kozak"
-          target="_blank"
-          rel="noreferrer noopener"
-          >GitHub</a
-        >
-        <a
-          class="side-note__link"
-          href="https://www.linkedin.com/in/kriskozak/"
-          target="_blank"
-          rel="noreferrer noopener"
-          >LinkedIn</a
-        >
-      </p>
-    </footer>
-  </body>
 </html>
