tablet/laptop version finished

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </ul>
     </header>
 
-    <section class="section">
+    <section class="section grid-section-1">
       <h2 class="section__title">Few words about me</h2>
       <article class="article">
         <h3 class="article__title">Who am I?</h3>
@@ -108,8 +108,8 @@
       </article>
     </section>
 
-    <section class="section">
-      <h2 class="section__title">
+    <section class="section grid-section-2">
+      <h2 class="section__title section__title--media">
         By the way, check out a list of my favourite web dev related games!
       </h2>
       <div class="wrapper">
