--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="content-wrapper">
     <header class="navigation-bar">
-      <button class="button button-js">
+      <button class="button button--js">
         <span class="accent-dot">.</span>menu
       </button>
       <nav class="menu menu-js">
