--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     href="https://fonts.googleapis.com/css2?family=Cantarell:ital@1&family=Roboto:ital,wght@0,400;0,500;1,100&family=Space+Mono:wght@400;700&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="css/main.css" type="text/css" />
-  <script src="js/index.js" defer></script>
+  <script src="js/index.js" type="module" defer></script>
   <script src="https://kit.fontawesome.com/9a61d55fd0.js"
     crossorigin="anonymous"></script>
   <title>Grid-Layout-Practice</title>
